@@ -1,19 +1,22 @@
 jdkdir=@jdkdir@
 jdkbindir=$(jdkdir)/bin
 JAVAC=$(jdkbindir)/javac
+JAVA=@JAVA@
 JAVACLASSES=@JAVACLASSES@
+top_srcdir=@top_srcdir@
 
 CLASSPHASES := __c U
 PHASES := $(CLASSPHASES) S
 
 INTERFACES := $(subst __c,,$(foreach sfx,$(PHASES),$(addsuffix $(sfx),$(addprefix i_,$($(module)PROTOCOLS)))))
 
-CLASSES := $(subst __c,,$(foreach sfx,$(CLASSPHASES),$(addsuffix $(sfx),$($(module)PROTOCOLS))))
+_CLASSES := $(subst __c,,$(foreach sfx,$(CLASSPHASES),$(addsuffix $(sfx),$($(module)PROTOCOLS))))
 
-CLASSFILES = $(addsuffix .class,$(CLASSES)) $(addsuffix .class,$(INTERFACES))
+JAVAFILES = $(addsuffix .java,$(_CLASSES)) $(addsuffix .java,$(INTERFACES))
 
-all: $(CLASSFILES)
+all: $(CLASSES)
 
-$(CLASSFILES): $(addsuffix .java,$(CLASSES)) $(addsuffix .java,$(INTERFACES))
-	JAVA_HOME=$(jdkdir) $(JAVAC) -classpath ../..:$(JAVACLASSES) $^
+.deps: $(JAVAFILES)
+        $(JAVA) -classpath $(top_srcdir)/java/jdeps.jar:@JAVACLASSES@ smr.JavaDeps.JavaDeps $(JAVAFILES) > .deps
 
+include .deps
